sablona profil, responzivna a prepojenia na newsletter a zoznam objednavok

--- a/css/text_divider.css
+++ b/css/text_divider.css
@@ -31,6 +31,7 @@
 }
 
 
+
 #logout_btn {
 	position: absolute;
     right: 10%;
@@ -42,7 +43,23 @@
 }
 
 
-#logout_btn:hover {
+
+#admin_dash_btn {
+	position: absolute;
+    left: 10%;
+    padding: 8px 12px;
+    border: none;
+    font-size: 20px;
+    background: transparent;
+    cursor: pointer;
+}
+
+#admin_dash_btn span {
+	color: #898989;
+
+}
+
+.h1_buttons button:hover {
 	text-decoration: underline;
 }
 
@@ -72,6 +89,11 @@
     #logout_btn {
     	position: relative;
     	right: 0px;
+    }
+
+    #admin_dash_btn {
+    	position: relative;
+    	left: 0px;
     }
 
 }
