--- a/css/polozka.css
+++ b/css/polozka.css
@@ -7,6 +7,7 @@
     margin: 100px auto;
     background-color: rgb(247, 247, 247);
     padding: 20px;
+    padding-bottom: 50px;
 }
 
 .product_main_info_container {
@@ -54,7 +55,7 @@
 
 
 .pridat_do_kosika_button {
-    width: 91%;
+    width: 90%;
     height: 40px;
     font-size: 15px;
     background-color: black;
@@ -180,10 +181,16 @@
 @media (max-width: 1050px) { 
     .product_main_info_container{
         flex-direction: column;
+
     }
+
+    .product_images {
+        justify-content: flex-start;
+        
+    }
+
     .product_images, .product_information{
         width: 100%;
-        height: auto;
     }   
 
 }
