--- a/css/polozka_produktu.css
+++ b/css/polozka_produktu.css
@@ -10,24 +10,23 @@
     padding-top: 25px;
     gap: clamp(10px, 2vw, 20px);
   
-
-
-    
     flex-shrink: 1; 
     min-width: 320px; 
     max-width: 600px; 
-    height: 100%;
-
+    
+    height: 700px;
+    
     width: 100%; 
 
 }
 
 .product_images_kontajner img {
-	width: 100%;
+	
 	height: 100%;
 
-	object-fit: cover;
-	
+	object-fit: contain;
+	width: 100%;
+	background-color: white;
 	pointer-events: none;
 	user-select: none;
 
@@ -48,6 +47,7 @@
 	width: 100%;
 	height: 100%;
 
+
 }
 
 
@@ -56,7 +56,8 @@
 	width: 100%;
 	height: 100%;
 	flex-shrink: 0;
-
+	
+	box-sizing: border-box;
 
 }
 
@@ -95,13 +96,33 @@
 
 .small_img.selected {
 	border: 2px solid #ff5101;
+	box-sizing: border-box;
 }
 
 
 
-@media (max-width: 425px) {
+
+
+@media (max-width: 850px) { 
+	.product_images {
+		
+		margin-bottom: 50px;
+
+	}
+}
+
+
+
+
+@media (max-width: 426px) {
     .product_images_kontajner {
     	height: 300px;
+    }
+
+    .product_images {
+        height: auto;
+        padding-bottom: 50px;
+        margin-bottom: 0;
     }
 
 }
