--- a/public/css/product_list.css
+++ b/public/css/product_list.css
@@ -29,3 +29,16 @@
 	justify-content: center;
 	
 }
+
+.product_link {
+	color: inherit;
+	text-decoration: none;
+}
+
+.product_link:hover,
+.product_link:focus,
+.product_link:active,
+.product_link:visited {
+  color: inherit;
+  text-decoration: none;
+}
