--- a/public/css/kosik_sidebar.css
+++ b/public/css/kosik_sidebar.css
@@ -68,24 +68,24 @@
 .kosik_sidebar_item {
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 10px;
 }
 
 #kosik_sidebar_item_photo{
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     background-color:#c5c1c1;
 }
 
 .kosik_sidebar_item_information {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 10px;
 }
 
 .kosik_sidebar_item_name {
     font-weight: bold;
-    font-size: 20px;
+    font-size: 24px;
 }
 
 .kosik_sidebar_item_size {
@@ -106,6 +106,9 @@
     margin-top: 30px;
 }
 
+.item_category {
+    font-weight: bold;
+}
 
 .kosik_sidebar_zaverecne_info_medzisucet {
     display: flex;
