--- a/public/css/kosik.css
+++ b/public/css/kosik.css
@@ -208,12 +208,7 @@ input[type="radio"]:checked {
 
 
 
-#item_image {
-    width: 100px;
-    background-color: red;
-    aspect-ratio: 1;
-    flex: 1;
-}
+
 
 .polozky_vo_kosiku_item {
     display: flex;
@@ -272,11 +267,7 @@ input[type="radio"]:checked {
     text-align: right;
 }
 
-.polozky_vo_kosiku_item {
-    width: 90%;
-    
-    padding: 20px 0;
-}
+
 
 .polozky_vo_kosiku {
     display: flex;
@@ -343,4 +334,49 @@ input[type="radio"]:checked {
         gap: 30px;
         justify-content: center;
     }
+}
+
+
+
+
+/* súbor: public/css/style.css */
+/* .cast1 {
+    
+    width: 120px;
+    height: 120px;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    margin-right: 1rem;
+    background-color: #f8f8f8;
+    border: 1px solid #ddd;
+    border-radius: 8px;
+  } */
+
+.polozky_vo_kosiku_item {
+    min-width: 500px;
+    padding: 20px 0;
+}
+  
+.item_image {
+    /* obrázok prispôsobíme kontajneru */
+    max-width: 100px;
+}
+
+.cast2 {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+#item_amount {
+    width: 30px;
+    outline: none;
+    text-align: center;
+}
+
+.cast2 div {
+    min-width: 150%;
 }
