--- a/public/css/polozka.css
+++ b/public/css/polozka.css
@@ -1,4 +1,3 @@
-
 .product_main_info {
     width: 90%;
     display: flex;
@@ -6,23 +5,25 @@
     align-items: center;
     margin: 100px auto;
     background-color: rgb(247, 247, 247);
-    padding: 20px;
-    padding-bottom: 50px;
+    padding: 20px 20px 50px;
+
 }
 
 .product_main_info_container {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 30px;
+
+    column-gap: 60px;
     width: 100%;
+
 }
 
 .product_images, .product_information {
     /* background-color: #d9d9d9; */
     width: 600px;
     height: 700px;
-    
+
 }
 
 
@@ -34,7 +35,7 @@
 .specified {
     font-weight: bold;
     color: black;
-    
+
 }
 
 
@@ -100,107 +101,8 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    transition: margin-bottom 0.2s ease-in-out,height 0.25s ease-in-out;
 }
-
-
-
-
-
-/*aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
-#sync1 .item {
-    background: #0c83e7;
-    /* padding: 80px 0px; */
-    height: 50vh;
-    min-height: 450px;
-    margin: 5px;
-    color: #FFF;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    text-align: center;
-}
-  
-
-#sync2 .item {
-    background: #C9C9C9;
-    /* padding: 10px 0px; */
-    height: 20vh;
-    min-height: 150px;
-    margin: 5px;
-    color: #FFF;
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    border-radius: 3px;
-    text-align: center;
-    cursor: pointer;
-}
-
-#sync2 .item h1 {
-    font-size: 18px;
-}
-
-#sync2 .current .item {
-    /* background: #0c83e7; */
-    border: 3px solid rgb(169, 98, 255);
-}
-  
-  
-.owl-theme .owl-nav [class*='owl-'] {
-    transition: all .3s ease;
-}
-.owl-theme .owl-nav [class*='owl-'].disabled:hover {
-    background-color: #D6D6D6;
-}
-  
-#sync1.owl-theme {
-    position: relative;
-}
-
-#sync1.owl-theme .owl-next, #sync1.owl-theme .owl-prev {
-    width: 22px;
-    height: 40px;
-    margin-top: -20px;
-    position: absolute;
-    top: 50%;
-}
-#sync1.owl-theme .owl-prev {
-    left: 10px;
-}
-#sync1.owl-theme .owl-next {
-    right: 10px;
-}
-.ifrm{
-    border:none;
-    width:100%;
-    margin-top:50px;
-}
-
-/*aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
-/*aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa*/
-
-@media (max-width: 1050px) { 
-    .product_main_info_container{
-        flex-direction: column;
-
-    }
-
-    .product_images {
-        justify-content: flex-start;
-        
-    }
-
-    .product_images, .product_information{
-        width: 100%;
-    }   
-
-}
-
-
-
-
-
-
-
 
 
 
@@ -234,12 +136,12 @@
     display: flex;
     justify-content: space-between;
     width: 100%;
-    
+
 }
 
 .category_container_element {
     width: 45%;
-    
+
 }
 
 .category_container_element a:hover {
@@ -250,7 +152,7 @@
 .category_container_element_znacky {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    row-gap: 0;    
+    row-gap: 0;
 }
 
 .category_container_element_znacky_item{
