vkladanie typu produktu do url a tlačidla a vloženie do stránky, ked kliknem na Tenisky, napíše na zozname produktov že Tenisky a pod. oprava Sezóny, Kategorie a pod. upravené in_stock na možnosť skladu a predajní, zoraduje podla zlacnenej ceny, komplet dorobený filter aj ked refreshnes stránku tam je, všetko s filtrovaním aj Výpredaj záložka, úprava css velkého filtra, pridanie tabuliek Color, Brand a iné, mocné javascripty

--- a/public/css/product_list.css
+++ b/public/css/product_list.css
@@ -24,16 +24,22 @@
 	column-gap: 1px;
 	grid-template-columns: repeat(auto-fit, clamp(320px, 100%, 365px));
 	grid-template-rows: repeat(auto-fit, 450px);
-	
+
 	align-items: center;
 	justify-content: center;
-	
+
 }
 
 .product_link {
 	color: inherit;
 	text-decoration: none;
 }
+
+
+.product_label {
+    text-transform: uppercase;
+}
+
 
 .product_link:hover,
 .product_link:focus,
