--- a/public/css/filter_big_menu.css
+++ b/public/css/filter_big_menu.css
@@ -16,19 +16,19 @@ body {
 
 /* overlay pre menu */
 .filter_overlay {
-  position: fixed; 
+  position: fixed;
   top: 0;
-  
+
   width: 100%;
   height: 100%; /* výška celej obrazovky */
   background: rgba(0, 0, 0, 0.5);
-  
+
   display: flex;
   align-items: center;
   justify-content: center;
 
   transition: 0.2s;
-  z-index: 1001; 
+  z-index: 1001;
   display: none; /* zobrazí sa len stlačením tlačidla */
 }
 
@@ -37,11 +37,11 @@ body {
 #filter_container {
   display: flex;
   margin: auto;
-  flex-direction: column; 
-  justify-content: center; 
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   width: 1000px;
-  
+
   height: 90vh;
   background-color: white;
   z-index: 1002;
@@ -49,13 +49,13 @@ body {
 
 
 
-
 /* horná časť filter menu */
 .top_filter_menu {
   display: flex;
+    flex-shrink: 0;
   flex-direction: column;
-  
-  min-height: 121px;
+    min-height: 60px;
+  height: auto;
   border-bottom: 1px solid #D9D9D9;
   width: 100%;
 }
@@ -73,8 +73,8 @@ body {
 
 .filt_top {
   display: flex;
-  height: 60px;
   min-height: 60px;
+  height: 60px;
   padding-top: 10px;
   width: 100%;
 
@@ -135,6 +135,7 @@ body {
   display: flex;
 
   gap: 15px;
+    overflow: hidden;
   align-items: flex-start;
   text-wrap: nowrap;
 }
@@ -150,11 +151,11 @@ body {
   display: flex;
   justify-content: flex-start;
   flex-wrap: wrap;
-  
-  
-  
+
+
+    overflow-y: hidden;
   margin: 10px 0px;
-  
+
   gap: 5px;
   scroll-behavior: smooth;
 }
@@ -200,8 +201,8 @@ body {
 
 
 #filter_back_btn:hover, #filter_next_btn:hover {
-  border: 1px solid #b3b3b3; 
-  transition: border 0.1s ease; 
+  border: 1px solid #b3b3b3;
+  transition: border 0.1s ease;
 }
 
 
@@ -229,10 +230,10 @@ body {
 .filter_content {
   display: flex;
   width: 100%;
-  
-  flex: 1 1 auto; 
+
+    flex: 1 1 0;
   min-height: 0;
-  height: auto;
+  overflow: hidden;
   justify-content: left;
 }
 
@@ -245,11 +246,10 @@ body {
   margin-bottom: 10px;
   gap: 1px;
   justify-content: flex-start;
-  
+
   flex: 1 1 350px;
-  
-  overflow-y: auto;
   height: auto;
+  overflow-y: auto;
   border-right: 1px solid #D9D9D9;
   z-index: 1;
 }
@@ -259,6 +259,7 @@ body {
 .filter_category .fil_cat, .fil_cat_selected {
   margin-top: 12px;
   height: 50px;
+  min-height: 50px;
   width: 95%;
   margin-left: 9px;
   background-color: transparent;
@@ -287,13 +288,15 @@ body {
 /* css pre obsah kategorii */
 .category_content {
   flex: 1 1 auto;
+
+  margin-bottom: 10px;
   padding-left: 15px;
   display: none;
   overflow-y: auto;
   justify-content: center;
   width: 65%;
   z-index: 2;
-
+  height: auto;
 }
 
 .category_content.selected {
@@ -319,7 +322,7 @@ body {
   border: 1px solid #D9d9d9;
   border-radius: 0px;
   position: relative;
-  
+
 
   vertical-align: middle;
   background-color: white;
@@ -366,11 +369,16 @@ body {
 .category_entry_list {
   display: flex;
   flex-direction: column;
-  
   justify-content: flex-start;
   gap: 15px;
   width: 100%;
+  box-sizing: border-box;
+    padding-bottom: 50px;
+    height: auto;
 }
+
+
+
 
 
 
@@ -379,7 +387,7 @@ body {
 .cat_entry_btn {
   display: flex;
   align-items: center;
-  
+
   justify-content: center;
   padding: 10px 15px 8px 10px;
 
@@ -389,7 +397,7 @@ body {
   text-align: center;
   cursor: pointer;
   font-size: 15px;
-  
+
   transition: border 0.1s ease;
 }
 
@@ -404,11 +412,14 @@ body {
   border: 1px solid #D9D9D9;
 }
 
+.color-box {
+    pointer-events: none;
+}
 
 /* kontajnery pre tlačidlá */
 .cat_btn_container, .cat_btn_container_sizes {
   display: flex;
-  
+
   justify-content: flex-start;
   flex-wrap: wrap;
   gap: 10px;
@@ -568,9 +579,14 @@ input[type="range"]::-webkit-slider-thumb {
 .bottom_filter_menu {
   position: relative;
   display: flex;
-  
+
   gap: 10px;
-  min-height: 73px;
+
+    flex-shrink: 1;
+    overflow: hidden;
+height: 60px;
+
+
   border-top: 1px solid #D9D9D9;
   width: 100%;
   box-shadow: 0 -2px 4px rgba(0, 0, 0, 0.1);
@@ -590,6 +606,7 @@ input[type="range"]::-webkit-slider-thumb {
 }
 
 
+
 #resetFilters:hover {
   text-decoration: none;
 }
@@ -601,10 +618,10 @@ input[type="range"]::-webkit-slider-thumb {
   display: flex;
   align-items: center;
   justify-content: center;
-  padding: 12px 20px 10px 20px; 
+  padding: 12px 20px 10px 20px;
   height: 40px;
   font-size: 18px;
-  
+
   min-width: 220px;
   margin-right: 10px;
 
@@ -612,7 +629,7 @@ input[type="range"]::-webkit-slider-thumb {
   border: none;
   background-color: black;
   color: white;
-  
+
   text-transform: uppercase; /* bude to uppercase ten text */
   margin-right: 15px;
 }
@@ -636,8 +653,8 @@ input[type="range"]::-webkit-slider-thumb {
 
 
 @media (max-width: 760px) {
-    
-    
+
+
     .fil_cat {
       width: 95vw;
     }
@@ -665,15 +682,15 @@ input[type="range"]::-webkit-slider-thumb {
 
 
 @media (max-width: 430px) {
-    
-    
+
+
     #sel_filter_container {
       margin-left: 20px;
     }
 
     .category_content, .category_content.selected {
       padding-left: 12.5px;
-      
+
     }
 
     .selected_filters p {
@@ -691,6 +708,5 @@ input[type="range"]::-webkit-slider-thumb {
     }
 
 }
-
 
 
