--- a/public/css/polozka.css
+++ b/public/css/polozka.css
@@ -46,12 +46,18 @@
     gap: 20px;
 }
 
+.velkost_label {
+    font-weight: bold;
+}
+
+
 .velkost_input {
     display: block;
     width: 90%;
     height: 40px;
     border: 1px solid rgb(169, 98, 255);
     outline: none; /* Vypne modrý obrys */
+    padding-left: 5px;
 }
 
 
@@ -74,6 +80,7 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
+    margin-top: 5px;
 }
 
 .fa-globe{
