--- a/public/css/product_item.css
+++ b/public/css/product_item.css
@@ -47,7 +47,6 @@
 	left: 15px;
 	background-color: transparent;
 	border: none;
-
 	z-index: 2;
 	width: 45px;
 }
@@ -55,8 +54,6 @@
 .trash_can img {
 	pointer-events: none;
 }
-
-
 
 .item_img {
 	width: 100%;
@@ -71,6 +68,21 @@
 	object-fit: cover;
 	user-select: none;
 }
+
+/* zlavička */
+.discounted_price {
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.old_price {
+    color: #aaa;
+    text-decoration: line-through;
+}
+
 
 #add_product {
 	outline: 1px solid #d9d9d9;
