--- a/public/css/banner_hlavna_ponuka.css
+++ b/public/css/banner_hlavna_ponuka.css
@@ -5,7 +5,15 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
 }
+
+.main_image_placeholder img{
+    width: 100%;
+    height: 100%;
+
+}
+
 /* 
 .banner_hlavna_ponuka_container {
     width: 75%;
@@ -72,4 +80,10 @@
         grid-column: span 1;
         justify-self: center;
     }
+}
+
+
+.lopty_banner img, .kopacky_banner img, .tenisky_banner img{
+    width: 100%;
+    height: 100%;
 }
