--- a/public/css/banner_hlavna_ponuka.css
+++ b/public/css/banner_hlavna_ponuka.css
@@ -10,11 +10,11 @@
 
 .main_image_placeholder img{
     width: 100%;
-    height: 100%;
-
+    height: 600px;
+    object-fit: cover;
 }
 
-/* 
+/*
 .banner_hlavna_ponuka_container {
     width: 75%;
     display: flex;
@@ -50,11 +50,11 @@
     justify-content: center;
 }
 
-.tenisky_banner:hover, 
+.tenisky_banner:hover,
 .tenisky_banner:active,
-.kopacky_banner:hover, 
+.kopacky_banner:hover,
 .kopacky_banner:active,
-.lopty_banner:hover, 
+.lopty_banner:hover,
 .lopty_banner:active{
     transform: scale(1.1); /* Zväčší element na 110% */
 }
