--- a/public/css/popup_overlay.css
+++ b/public/css/popup_overlay.css
@@ -4,21 +4,16 @@ body {
 
 
 #popup_overlay {
-  position: fixed; 
+  position: fixed;
   top: 0;
-  
   width: 100%;
   height: 100%; /* výška celej obrazovky */
   background: rgba(0, 0, 0, 0.5);
-  
   display: none;
   align-items: center;
   justify-content: center;
-
   transition: 0.2s;
-  z-index: 1001; 
-  
-
+  z-index: 1001;
 }
 
 #popup_overlay.active {
@@ -26,15 +21,9 @@ body {
 }
 
 
-
 .popup_container {
 	display: flex;
-	
 	flex-direction: column;
-	
-	
-
-	
 	text-align: center;
 	font-size: 15px;
 	background-color: white;
@@ -43,14 +32,14 @@ body {
 	width: 350px;
 	height: 200px;
 	box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
-
 }
 
 
-.popup_container h2,p {
+.popup_container h2, .popup_container p {
 	margin: 0;
 	margin-top: 5px;
 }
+
 
 .popup_content {
 
@@ -59,7 +48,7 @@ body {
 	margin: auto;
 	padding-bottom: 5px;
 	gap: 30px;
-	
+
 
 }
 
@@ -69,7 +58,7 @@ body {
 	justify-content: center;
 	gap: 20px;
 
-	
+
 }
 
 
