--- a/public/css/product_item.css
+++ b/public/css/product_item.css
@@ -10,7 +10,7 @@
 
 
 .product_item:hover {
-	outline: 1px solid #D9D9D9;
+	border: 1px solid #D9D9D9;
 }
 
 
@@ -20,7 +20,7 @@
 	flex-direction: column;
 	text-align: center;
     background-color: white;
-
+    box-sizing: border-box;
     width: min(100%, 365px);
     height: 450px;
 }
@@ -53,6 +53,8 @@
 
 .trash_can img {
 	pointer-events: none;
+    width: 100%;
+    height: 100%;
 }
 
 .item_img {
@@ -84,6 +86,11 @@
 }
 
 
+article a {
+    height: 100%;
+}
+
 #add_product {
 	outline: 1px solid #d9d9d9;
+    box-sizing: border-box;
 }
