--- a/public/css/profil.css
+++ b/public/css/profil.css
@@ -3,13 +3,13 @@
 	flex-direction: column;
 	align-items: center;
 	width: 100vw;
+    margin-top: 50px;
 	height: auto;
 }
 
 .profil_info_container {
 	display: flex;
 	flex-wrap: wrap;
-	margin-top: 20px;
 	width: 75%;
 	flex-direction: column;
 	row-gap: 50px;
@@ -36,10 +36,19 @@
 
 /* nastavíme nech sú tak široké, aby sa tam zmestilo ešte 50px medzera*/
 .osobne_udaje_pers, .adresa_dorucenia {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+
 	outline: 1px solid black;
 	width: calc((100% - 50px)/2);
-	height: 500px;
+    min-height: 235px;
+	max-height: 455px;
 	min-width: 400px;
+}
+
+.osobne h1 {
+    margin-top: 29px;
 }
 
 
@@ -55,7 +64,6 @@
 	display: flex;
 	flex-direction: column;
 	gap: 5px;
-
 	list-style-type: none;
 	padding: 0;
 	margin: 0;
@@ -65,30 +73,26 @@
 }
 
 
-/* spoločná sekcia pre tie 2 sekcie */
-.osobne_udaje_pers, .adresa_dorucenia {
-	display: flex;
-	flex-direction: column;
-	justify-content: flex-start;
-
-}
-
-
 
 /* všetky sekcie v tomto budú odsadené a vycentrované */
 .osobne_udaje_pers section {
 	margin-left: 30px;
-	margin-top: 30px;
-	padding-bottom: 15px;
 	justify-content: center;
-    height: 50%;
+    height: 220px;
 }
 
 .adresa_dorucenia section {
-    height: 50%;
+    height: 220px;
 }
 
 
+.adresa_dorucenia {
+    gap: 10px;
+}
+
+.adresa_billing {
+    height: 235px;
+}
 
 
 
@@ -150,21 +154,17 @@
 
 
 /* media querička*/
-@media (max-width: 1080px) {
+@media (max-width: 1067px) {
 
 	.osobne_udaje_pers, .adresa_dorucenia {
 		width: 90%;
 		min-width: 318px;
-		padding-bottom: 20px;
 	}
 
 	.osobne_udaje_adresa {
 		display: flex;
 		justify-content: center;
-	}
-
-	.adresa_dorucenia {
-		margin-top: 50px;
+        gap: 50px;
 	}
 
 
@@ -172,12 +172,13 @@
 	.osobne_udaje_pers {
 		border: none;
 		outline: none;
-		margin-bottom: 50px;
 	}
 
 
 	.osobne_udaje_pers section {
 		margin-left: 0px;
+        height: 235px;
+        justify-content: flex-start;
 	}
 
 
@@ -188,7 +189,6 @@
 		width: 100%;
 		border: none;
 		outline: 1px solid black;
-		padding-top: 30px;
 	}
 
 
@@ -213,7 +213,7 @@
 
 	/* zmenší sa výška, aby nezaberala veľa */
 	.adresa_dorucenia {
-		height: 250px;
+		height: 235px;
 	}
 
 
@@ -221,7 +221,6 @@
 	.newsletter_objednavky {
 		width: 90%;
 		min-width: 318px;
-		margin: 0px auto;
+		margin: 0 auto;
 	}
-
 }
