--- a/public/css/polozka_produktu.css
+++ b/public/css/polozka_produktu.css
@@ -1,5 +1,6 @@
 .product_images {
-	display: flex;
+    display: flex;
+    height: 800px;
 }
 
 .product_images_kontajner {
@@ -9,95 +10,161 @@
     padding-top: 25px;
     gap: clamp(10px, 2vw, 20px);
 
-    flex-shrink: 1;
+    flex-shrink: 0;
+
     min-width: 320px;
+    width: auto;
     max-width: 600px;
+
     height: 700px;
-    width: 100%;
+    max-height: 700px;
+    transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
 }
 
 .product_images_kontajner img {
-	height: 100%;
-	object-fit: contain;
-	width: 100%;
-	background-color: white;
-	pointer-events: none;
-	user-select: none;
+    height: 100%;
+
+    width: 100%;
+    background-color: white;
+    pointer-events: none;
+    user-select: none;
 
 }
 
 
+.form_div {
+    width: 100%;
+}
+
 
 .small_images, .big_images {
-	display: flex;
-	width: 100%;
-	flex-wrap: nowrap;
-	overflow: hidden;
+    display: flex;
+    width: 100%;
+    flex-wrap: nowrap;
+    overflow: hidden;
 
 }
 
 
 .big_images {
-	width: 100%;
-	height: 100%;
+    width: 100%;
+    height: 100%;
 }
 
 
 
 .big_img {
-	display: flex;
-	width: 100%;
-	height: 100%;
-	flex-shrink: 0;
-	box-sizing: border-box;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+
+    justify-content: center;
+    align-items: center;
+
+    flex-shrink: 0;
+    box-sizing: border-box;
 }
 
-.big_images img {
-	display: flex;
-	width: 100%;
-	height: 100%;
+.big_img img {
+    display: block;
+    width: 170%;
+    height: 110%;
+
+    object-fit: cover;
+    object-position: center;
 }
+
+
 
 
 .big_images.active {
-	cursor: pointer;
+    cursor: pointer;
 }
 
 
 .small_images {
-	gap: 10px;
+    gap: 10px;
 }
 
 
 .small_img {
-	display: flex;
-	width: calc((100% - 20px)/3); /* aby boli 3 a medzi nimi boli 2 medzery po 10px */
-	box-sizing: border-box;
-	/*height: 170px;*/
+    display: flex;
+    width: calc((100% - 20px)/3); /* aby boli 3 a medzi nimi boli 2 medzery po 10px */
+    box-sizing: border-box;
+    /*height: 170px;*/
 
-	aspect-ratio: 190/170;
-	flex-shrink: 0;
-	transition: 0.1s border ease-in-out;
+
+    aspect-ratio: 1/1;
+    flex-shrink: 0;
+    transition: 0.1s border ease-in-out;
+}
+
+.small_img img {
+    object-fit: cover;
 }
 
 
+
+
 .small_img.selected {
-	border: 2px solid #ff5101;
-	box-sizing: border-box;
+    border: 2px solid #ff5101;
+    box-sizing: border-box;
+}
+
+
+@media (max-width: 1150px) {
+    .product_images_kontajner {
+        width: 500px;
+        height: 600px;
+    }
+}
+
+
+
+@media (max-width: 1025px) {
+    .product_main_info_container {
+        flex-direction: column;
+    }
+
+    .product_images_kontajner {
+        width: 80%;
+        height: 100%;
+    }
+
+    .product_images {
+        justify-content: center;
+    }
+
+    .pridat_do_kosika_button, .velkost_input {
+        width: 80%;
+    }
+
 }
 
 
 
 @media (max-width: 850px) {
-	.product_images {
-		margin-bottom: 50px;
-	}
+    .product_images {
+        margin-bottom: 50px;
+    }
 }
+
+
+@media (max-width: 750px) {
+    .big_images {
+
+    }
+
+
+
+}
+
 
 
 @media (max-width: 426px) {
     .product_images_kontajner {
-    	height: 300px;
+
     }
 
     .product_images {
