--- a/public/css/polozka_produktu.css
+++ b/public/css/polozka_produktu.css
@@ -1,34 +1,30 @@
 .product_images {
     display: flex;
-    height: 800px;
+    max-width: 600px;
+    width: 100%;
+
 }
 
 .product_images_kontajner {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding-top: 25px;
+    justify-content: flex-start;
     gap: clamp(10px, 2vw, 20px);
-
-    flex-shrink: 0;
-
+    flex-shrink: 1;
     min-width: 320px;
-    width: auto;
     max-width: 600px;
-
-    height: 700px;
     max-height: 700px;
-    transition: width 0.3s ease-in-out, height 0.3s ease-in-out;
+    height: auto;
+    width: 100%;
+    transition: width 0.5s ease-in-out, height 0.5s ease-in-out;
 }
 
 .product_images_kontajner img {
     height: 100%;
-
     width: 100%;
     background-color: white;
     pointer-events: none;
     user-select: none;
-
 }
 
 
@@ -42,15 +38,13 @@
     width: 100%;
     flex-wrap: nowrap;
     overflow: hidden;
-
 }
 
 
 .big_images {
     width: 100%;
-    height: 100%;
+    aspect-ratio: 600/540;
 }
-
 
 
 .big_img {
@@ -61,7 +55,6 @@
 
     justify-content: center;
     align-items: center;
-
     flex-shrink: 0;
     box-sizing: border-box;
 }
@@ -76,8 +69,6 @@
 }
 
 
-
-
 .big_images.active {
     cursor: pointer;
 }
@@ -87,13 +78,10 @@
     gap: 10px;
 }
 
-
 .small_img {
     display: flex;
     width: calc((100% - 20px)/3); /* aby boli 3 a medzi nimi boli 2 medzery po 10px */
     box-sizing: border-box;
-    /*height: 170px;*/
-
 
     aspect-ratio: 1/1;
     flex-shrink: 0;
@@ -104,72 +92,111 @@
     object-fit: cover;
 }
 
-
-
-
 .small_img.selected {
     border: 2px solid #ff5101;
     box-sizing: border-box;
 }
 
 
-@media (max-width: 1150px) {
-    .product_images_kontajner {
-        width: 500px;
-        height: 600px;
-    }
+.itemBRATU {
+    object-fit: cover;
 }
 
 
 
-@media (max-width: 1025px) {
+
+
+
+
+@media (max-width: 1050px) {
     .product_main_info_container {
         flex-direction: column;
+        gap: 20px;
     }
 
+    .product_main_info {
+        padding: 0 0 20px 0;
+    }
+
+
     .product_images_kontajner {
-        width: 80%;
+        width: 100%;
         height: 100%;
+        max-width: none;
     }
 
     .product_images {
         justify-content: center;
+        max-width: none;
+        width: 100%;
     }
 
-    .pridat_do_kosika_button, .velkost_input {
-        width: 80%;
+    .big_images {
+        width: 100%;
     }
+
+    .product_information {
+        overflow: hidden;
+        max-height: 0;
+        transition: max-height 0.5s ease;
+
+        width: calc(100% - 20px);
+        margin-left: 10px;
+    }
+
+    .product_information.expanded {
+        max-height: 2000px; /* musí byť dosť veľké, aby pokrylo celý obsah */
+    }
+
 
 }
+
+
+
 
 
 
 @media (max-width: 850px) {
-    .product_images {
-        margin-bottom: 50px;
-    }
-}
-
-
-@media (max-width: 750px) {
-    .big_images {
-
+    .product_main_info {
+        width: 100%;
+        padding: 0 0 20px 0;
+        margin-top: 80px;
     }
 
+    .product_main_info_container {
+       box-sizing: border-box;
+        margin: 20px;
+    }
 
+    .product_information {
+        margin-left: 10px;
+    }
 
 }
 
 
 
 @media (max-width: 426px) {
-    .product_images_kontajner {
-
-    }
-
     .product_images {
         height: auto;
-        padding-bottom: 50px;
         margin-bottom: 0;
     }
+
+    .product_images_kontajner {
+        gap: 10px;
+    }
+
+    .small_images {
+        gap: 10px;
+    }
+
+    .product_main_info_container {
+        margin: 10px;
+    }
+
+    .product_information {
+        width: calc(100% - 20px);
+    }
+
+
 }
