--- a/public/css/kosik.css
+++ b/public/css/kosik.css
@@ -47,10 +47,10 @@
 .pokladna_input , .krajina_select{
     display: block;
     width: 100%;
-    height: 40px;   
+    height: 40px;
     outline: none;
     border: 1px solid rgb(212, 210, 210);
-    
+
 }
 .pokladna_input:hover {
     border-color: rgb(169, 98, 255);
@@ -117,10 +117,10 @@
 }
 
 .dalsie_info_container label {
-    font-size: 13px;   
+    font-size: 13px;
 }
 .emial_container_odkaz {
-    color: rgb(212, 210, 210);   
+    color: rgb(212, 210, 210);
 }
 
 .pokladna_input::placeholder {
@@ -136,7 +136,7 @@
 
 .moznosti label {
     background-color: rgb(245, 245, 245);
-    
+
     display: flex;
     flex-direction: row;
     gap: 30px;
@@ -272,7 +272,7 @@ input[type="radio"]:checked {
 .polozky_vo_kosiku {
     display: flex;
     flex-direction: column;
-    
+
     align-items: center;
     border-bottom: 1px solid black;
     max-height: 300px;
@@ -341,14 +341,14 @@ input[type="radio"]:checked {
 
 /* súbor: public/css/style.css */
 /* .cast1 {
-    
+
     width: 120px;
     height: 120px;
-    
+
     display: flex;
     align-items: center;
     justify-content: center;
-    
+
     margin-right: 1rem;
     background-color: #f8f8f8;
     border: 1px solid #ddd;
@@ -359,10 +359,12 @@ input[type="radio"]:checked {
     min-width: 500px;
     padding: 20px 0;
 }
-  
+
 .item_image {
     /* obrázok prispôsobíme kontajneru */
     max-width: 100px;
+    height: 100%;
+    mix-blend-mode: multiply;
 }
 
 .cast2 {
