--- a/public/css/menu_bar.css
+++ b/public/css/menu_bar.css
@@ -53,7 +53,13 @@ img {
     margin-left: auto;
 }
 
-.nav a , .right-items a {
+.nav a {
+    text-decoration: none;
+    color: black;
+    box-sizing: border-box;
+}
+
+.main_category > a, .right-items a {
     text-decoration: none;
     color: white;
     padding: 2px 0px;
@@ -61,7 +67,7 @@ img {
 }
 
 /* Hover efekt */
-.nav a:hover {
+.main_category > a:hover {
     /* background-color: #ddd; */
     color: black;
     border-bottom: 5px solid white;
