--- a/public/css/menu_sidebar.css
+++ b/public/css/menu_sidebar.css
@@ -46,7 +46,7 @@
     display: none; /* skryté submenu */
     padding-left: 20px; /* odsadenie pre vizuálnu hierarchiu */
 }
-  
+
   /* Ak je submenu otvorené, zobrazíme ho */
 .submenu.open {
     display: block;
@@ -57,25 +57,47 @@
     padding-left: 20px; /* odsadenie pre vizuálnu hierarchiu */
 }
 
-.submenuPanskeTenisky.open, .submenuDamskeTenisky.open, .submenuZnacky.open, .submenuDetskeTenisky.open,
- .submenuMUZI.open,
- .submenuZENY.open,
- .submenuDETI.open,
- .submenuZnackyOBLECENIE.open {
-    display: flex;
+.submenu3 a {
+    text-decoration: none;
+    color: black;
+}
+
+.submenu3 a:hover {
+    text-decoration: underline;
+}
+
+
+.submenuOpen {
+    display: none;
     flex-direction: column;
     gap: 10px;
 }
 
-  /* Možno pridáte aj jednoduchý prechod */
-.submenu {
-transition: all 0.3s ease;
+.submenuOpen.open {
+    display: flex;
 }
+
+
+
+.submenu {
+    transition: all 0.3s ease;
+}
+
+.sidebar_item > *:not(.sidebar_vypredaj_item) { /* aby to nebralo eventy ak kliknem len na plusko alebo len na text, proste ako celý div */
+    pointer-events: none;
+}
+
 
 .sidebar_main {
     font-size: 25px;
     font-weight: bold;
 }
+
+
+.sidebar_item:hover .sidebar_main:not(.plus), .sidebar_item:hover .sidebar2_main:not(.plus) {
+    text-decoration: underline;
+}
+
 
 .sidebar li {
     /* margin-top: 20px; */
@@ -155,14 +177,14 @@ transition: all 0.3s ease;
     .sidebar {
         width: 95vw;
         height: 100%;
-    }   
+    }
 }
 
 .sidebar_vypredaj_item{
     color: rgb(240, 63, 63);
+    text-decoration: none;
 }
 
 .komunita_vypredaj_item{
     color: rgb(169, 98, 255);
-    margin-bottom: 30px;
 }
