--- a/public/css/menu_bar.css
+++ b/public/css/menu_bar.css
@@ -27,14 +27,11 @@ img {
     padding: 0;
 }
 
-.logo {
+.logoMain {
     display: flex;
     justify-content: center;
     align-items: center;
-    color: white;
-    font-size: 30px;
     font-weight: bold;
-    /* margin-left: -30px; */
 }
 
 .nav {
@@ -69,7 +66,8 @@ img {
 /* Hover efekt */
 .main_category > a:hover {
     /* background-color: #ddd; */
-    color: black;
+    /* color: black; */
+    color: rgb(169, 98, 255);
     border-bottom: 5px solid white;
 }
 
@@ -80,7 +78,7 @@ img {
 }
 
 .profil, .kosik {
-    background-color: #606060;
+    /* background-color: #606060; */
     width: 80px;
     height: 70px;
     display: flex;
@@ -121,3 +119,13 @@ img {
 .logo_link {
     all: unset;
 }
+
+.fa-cart-shopping, .fa-user {
+    font-size: 40px;
+    color: rgb(169, 98, 255);
+}
+.fa-basketball {
+    font-size: 50px;
+    color: rgb(169, 98, 255);
+}
+
