--- a/public/css/profil.css
+++ b/public/css/profil.css
@@ -52,7 +52,7 @@
 }
 
 
-.newsletter_odber, .objednavky {
+.newsletter_odber {
 	width: 100%;
 	height: 200px;
 	outline: 1px solid black;
@@ -224,3 +224,30 @@
 		margin: 0 auto;
 	}
 }
+
+.orders-table {
+	width: 100%;
+	border-collapse: collapse;
+	margin-top: 1rem;
+  }
+  
+  .orders-table th,
+  .orders-table td {
+	border: 1px solid #ddd;
+	padding: 0.75rem;
+	text-align: left;
+  }
+  
+  .orders-table th {
+	background-color: #f8f8f8;
+  }
+  
+
+  .orders-table tbody tr {
+	transition: background-color 0.2s ease;
+	cursor: pointer; /* voliteľne, ak chceš ukazovateľ ruky */
+  }
+  
+  .orders-table tbody tr:hover {
+	background-color: #f5f5f5;
+  }
